[package]
name = "emgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# app =["sim_run/app"]
# Pring id type name it was created from in debug.
widget-id-type = []
trace-dispatcher = ["tracing"]
trace-widget = ["tracing"]

[dependencies]
anyhow = "1.0"
bitflags = "2.1"
log = "0.4"
smallvec = "1.10"
m = { git = "ssh://git@github.com/Pancir/matry", version = "0.1", package = "matry" }

tracing = { version = "0.1", optional = true }

[dev-dependencies]
float_eq = "1.0"