[package]
name = "gui7_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }

sim_ui = { path = "../../../sim-ui", package = "sim_ui" }
sim_run = { path = "../../../sim-run", package = "sim_run", features = ["app"] }
sim_draw = { path = "../../../sim-draw", package = "sim_draw" }
sim_input = { path = "../../../sim-input", package = "sim_input"}
